SubVersion: $Id$

Set svn:eol property to native on all files
	
To do : 
- manage ERR packets which can be received at any time
- make dirlist more generic (merge apps & vars)

Log:

- 05/06/2006, version 0.1.5: roms
	- added stdints3.h header
	- increased verbosity of USB commands layer
	- re-enabled TI84+ OS sending
	
- 31/05/2006, version 0.1.4: roms
	- don't export ticalcs_probe_calc_1/2 any longer because they can't 
	be used easily outside of the library
	- fixed critical bug in the DBUS (2-bytes buffer overflow) and possible
	bug in the DUSB packet layer (null remainder).
	- fixed bug in TI84+ recv_idlist (attempting to modify const string)
	
- 26/05/2006, version 0.1.3: roms/tyler
	- definetely fixed warnings on TI keys structures (roms)
	- fixed TI-83+/TI-84+ ROM Dumping Timeout Error Bug (tyler)

- 16/05/2006, version 0.1.2: roms
	- implemented send_os for Titanium/USB and fixed some commands
	- implemented send_os for TI84+/USB
	- added Titanium/USB ROM dumper
	- increased ROM dumper block size from 1KB to 4KB (faster)
	- fixed misfeature in Titanium get_dirlist
	- fixed OS sending page address in TI84+/USB support

- 06/05/2006, version 0.1.1: roms
	- make ticalcs_dirlist_mem_used useable with apps tree
	- implemented get_memfree functions
	- added a new probing method for USB hand-helds only (faster)
	- added FTS_BACKUP flag for hand-helds with real backup capability
	- added common function which emulates a backup by grouping
	- definitely fixed return value for probing functions
	- implemented a garbage collector for virtual packets, calc attributes anc calc parameters.
		Needed because a DUSB function may returns an error without releasing allocated memory
		(easier by this way).
	- added ticalcs_dirlist_flash_used which count memory used by both archived variables and apps
	- fixed pbar with TI73/84+ sending of FLASH app
	- fixed ca_del_array & cp_del_array for garbage collector
	- manage hand-held error codes
	- manage delaying packets
